2014-08-07 Andrew Burgess <andrew.burgess@embecosm.com>
	Handle case where kill-ring-yank-pointer is nil (empty kill ring).

2014-01-04 Toon Claes <toon@tonotdo.com>
	Use Semantic Versioning (www.semver.org) from now.

	Move ChangeLog to seperate file.

2013-11-17 skyer9 <skyer9 at gmail dot com>

	Works with `delete-selection-mode'.

	Modify `save-and-restore' option when exit.
	If Emacs version is 24+, browse-kill-ring works with `query-replace' properly.

	Works with kill-ring-yank-pointer.
	When kill is yanked by browse-kill-ring,
	browse-kill-ring remembers cursor position.

	Add `browse-kill-ring-display-leftmost-duplicate' variable.
	When `browse-kill-ring-display-duplicates' is nil,
	leftmost(last) duplicate will be displayed.

	Some bug fix.

2013-08-10 Ethan Glasser-Camp

	Fix browse-kill-ring-update. Commit ca0b5f4 broke it. Fixing it
	also exposed some problems with how the overlay is handled.

2013-07-29 Ethan Glasser-Camp

	Make `browse-kill-ring-quit-action' default to
	`save-and-restore'. This seems to DWIM in most cases: running
	browse-kill-ring with only one window and then pressing q will
	close that window, but if you have two windows open when you run
	browse-kill-ring, it will restore the windows you had open. For
	more information and history, see
	https://github.com/browse-kill-ring/browse-kill-ring/issues/11.

2013-01-19 Ethan Glasser-Camp

	browse-kill-ring-mode now uses an overlay to show what your
	buffer would look like if you inserted the current item.

2013-01-02 Ethan Glasser-Camp

	Fix a bug with default faces used to highlight items.
	The symbols browse-kill-ring-current-entry-face and
	browse-kill-ring-inserted-item-face are now treated like
	variables specifying a face instead of faces themselves. If you
	defined faces with these names, you will need to set the symbols
	(as variables) to the names of the faces you defined.

	(setq browse-kill-ring-current-entry-face 'browse-kill-ring-current-entry-face)
